--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="main.css">
 
 <body>
-    <div>
+    <div id="mainDiv">
         <img id="myImage" src="img1.jpg" alt="">
         <p id="myParagraph">This is an example paragraph</p>
         <button id="changeText">Change</button>
