--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 <link rel="stylesheet" href="main.css">
 
 <body>
-    <div id="mainDiv">
+    <div id="mainDiv" class="main">
         <img id="myImage" src="img1.jpg" alt="">
         <p id="myParagraph">This is an example paragraph</p>
-        <button id="changeText">Change</button>
+        <div class="btns">
+            <button id="changeText">Change Text</button>
+            <button id="changeImage">Change Image</button>
+            <button id="changeColor">Change Color</button>
+        </div>
     </div>
 </body>
 <script src="main.js"></script>
